# llm-ideology-explorer

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
notebooks/: dataset-curation-notebook.ipynb  llm_ideology_demo.ipynb
src/: config.py  llm_providers.py  prompts.py  utils.py
